// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="modal-field"
>
  <label
    className="display-flex-center"
    htmlFor="key"
  >
    settings.almintegration.form.key
    <em
      className="mandatory"
    >
      *
    </em>
  </label>
  <input
    className="input-super-large"
    disabled={false}
    id="key"
    maxLength={40}
    name="key"
    onChange={[Function]}
    size={50}
    type="text"
    value="key"
  />
</div>
`;

exports[`should render correctly: optional 1`] = `
<div
  className="modal-field"
>
  <label
    className="display-flex-center"
    htmlFor="key"
  >
    settings.almintegration.form.key
  </label>
  <input
    className="input-super-large"
    disabled={false}
    id="key"
    maxLength={40}
    name="key"
    onChange={[Function]}
    size={50}
    type="text"
    value="key"
  />
</div>
`;

exports[`should render correctly: textarea 1`] = `
<div
  className="modal-field"
>
  <label
    className="display-flex-center"
    htmlFor="key"
  >
    settings.almintegration.form.key
    <em
      className="mandatory"
    >
      *
    </em>
  </label>
  <textarea
    className="settings-large-input"
    disabled={false}
    id="key"
    maxLength={40}
    onChange={[Function]}
    required={true}
    rows={5}
    value="key"
  />
</div>
`;

exports[`should render correctly: with help 1`] = `
<div
  className="modal-field"
>
  <label
    className="display-flex-center"
    htmlFor="key"
  >
    settings.almintegration.form.key
    <em
      className="mandatory"
    >
      *
    </em>
    <HelpTooltip
      className="spacer-left"
      overlay="help"
      placement="right"
    />
  </label>
  <input
    className="input-super-large"
    disabled={false}
    id="key"
    maxLength={40}
    name="key"
    onChange={[Function]}
    size={50}
    type="text"
    value="key"
  />
</div>
`;
